SUBDIRS = .

bin_PROGRAMS =

pkgicondir = $(pkgdatadir)/icons


#TODO: create real icons for xndraw
#and get rid of the gnome stuff(can still use them from an installed gnome on linux)
#remember to qualify path with $(srcdir)/ 
#so if $(srcdir) != $(builddir)
#everything still works, otherwise 'make distcheck' broken
pkgicon_DATA = $(srcdir)/x3drawicon.png \
                $(srcdir)/access.png \
		 $(srcdir)/accessories-calculator.png \
		$(srcdir)/accessories-dictionary.png \
		$(srcdir)/accessories-text-editor.png \
		$(srcdir)/background.png \
		$(srcdir)/document-send.png \
		$(srcdir)/edit-cut.png \
		$(srcdir)/edit-find.png \
		$(srcdir)/editclear.png \
		$(srcdir)/editpaste.png \
		$(srcdir)/fileopen.png \
		$(srcdir)/fileprint.png \
		$(srcdir)/filesave.png \
		$(srcdir)/gnome-remote-desktop.png \
		$(srcdir)/gtk-add.png \
		$(srcdir)/gtk-execute.png \
		$(srcdir)/gtk-zoom-in.png \
		$(srcdir)/gtk-zoom-out.png \
		$(srcdir)/logviewer.png \
		$(srcdir)/object-flip-horizontal.png \
		$(srcdir)/object-flip-vertical.png
